--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -13,10 +13,7 @@
 		"skipLibCheck": true,
 		"composite": true,
 		"jsx": "react-jsx",
-		"baseUrl": ".",
-		"paths": {
-			"@renderer/*": ["src/renderer/src/*"]
-		}
+		"baseUrl": "."
 	},
 	"include": ["src/renderer/src/env.d.ts", "src/renderer/src/**/*", "src/renderer/src/**/*.tsx", "src/*.ts"]
 }
